WMS avanzado. Coje las capas, pero tiene meterlas en el tool. Hay un problema de async...

--- a/Web.config
+++ b/Web.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0"?>
 <configuration>
   <system.web>
-    <compilation debug="true" targetFramework="4.0"/>
+    <compilation debug="true" targetFramework="4.5"/>
   </system.web>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="getLayers.aspx" />
+      </files>
+    </defaultDocument>
+    <directoryBrowse enabled="false" />
+  </system.webServer>
 </configuration>
