vuelta a proxy .net. El php en local no funciona. Para poder probar en el servidor...

--- a/code/proxy.config
+++ b/code/proxy.config
@@ -11,6 +11,7 @@
     <serverUrl url="http://services.arcgisonline.com" matchAll="true"/>
     <serverUrl url="http://server.arcgisonline.com" matchAll="true"/>
     <serverUrl url="http://geocatmin.ingemmet.gob.pe" matchAll="true"/>
+    <serverUrl url="qvialweb.es" matchAll="true"/>
   </serverUrls>
 </ProxyConfig>
 
