Update First released

--- a/code/proxy.config
+++ b/code/proxy.config
@@ -13,6 +13,7 @@
     <serverUrl url="http://geocatmin.ingemmet.gob.pe" matchAll="true"/>
     <serverUrl url="http://qvialweb.es" matchAll="true"/>
     <serverUrl url="http://qvialweb.es:6080/arcgis/admin/generateToken" matchAll="true"/>
+    <serverUrl url="https://qvialweb.es:6443/arcgis/tokens/" matchAll="true"/>
     
   </serverUrls>
 </ProxyConfig>
