--- a/code/proxy.config
+++ b/code/proxy.config
@@ -11,9 +11,9 @@
     <serverUrl url="http://services.arcgisonline.com" matchAll="true"/>
     <serverUrl url="http://server.arcgisonline.com" matchAll="true"/>
     <serverUrl url="http://geocatmin.ingemmet.gob.pe" matchAll="true"/>
+    <serverUrl url="https://qvialweb.es:6443/arcgis/tokens" matchAll="true"/>
     <serverUrl url="http://qvialweb.es" matchAll="true"/>
-    <serverUrl url="http://qvialweb.es:6080/arcgis/admin/generateToken" matchAll="true"/>
-    <serverUrl url="https://qvialweb.es:6443/arcgis/tokens/" matchAll="true"/>
+    <serverUrl url="http://qvialweb.es:6080/arcgis/admin/generateToken" matchAll="true"/>    
     
   </serverUrls>
 </ProxyConfig>
